Adopt active-maintenance policy in library survey; file investigation issues
Ground rule 4 is now an explicit policy: only actively maintained,
regularly released projects are eligible, in test/build scope as well
as runtime. Under it, jqwik (upstream-declared maintenance mode) and
Cacio-tta (thin maintenance plus per-release JDK-internals coupling)
move from the recommended list to the rejects table; the #91 layer-2
substrate falls back to xvfb-run, and the property-based-testing
capability is recorded as wanted-but-deferred.

The PIT row now explains what mutation testing is and clarifies its
deferral is coverage-gated, not a maintenance rejection.

Each surviving recommendation is cross-linked to a new investigation
issue covering comparables, benefits, and costs: FlatLaf #153,
JFreeSVG #154, ArchUnit #155, picocli #156, Error Prone #157.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MQQ8nb2p3RYoYae6SvokD6